# tvseg

./: CMakeLists.txt
lib/cuda_samples/common/inc/: helper_string.h
lib/tvseg/: gradientcpu.cpp  imagedimensions.cpp  kmeanscpu.cpp  params.h  scribbles.cpp  segmentationimpl.cpp  tvdatatermcolorgpu.cpp  tvdatatermparzengpu.cpp  tvsolvergpu.cpp  tvvisualizercpu.cpp  tvweightedge.cpp
lib/tvseg/cuda/: errorhandling.h  params.h  parzendataterm.cu  solver.cu
lib/tvseg/settings/: macroutils.h  settings.h
lib/tvseg/settingsdef/: weightsettings.h
lib/tvseg/util/: includeopencv.h  logging.h  opencvhelper.cpp  qtopencvhelper.cpp
src/: algorithmwidget.cpp  cvimagedisplaywidget.cpp  feedbackwidget.cpp  main.cpp  scribbleimagedisplaywidget.cpp  settingseditor.cpp  tvsegwindow.cpp  tvsegwindow.h
src/util/: valuetransition.h
